--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <h1>About</h1>
           <p class="lead">Many people in life find purpose in serving others.  At Primal Touch, we have been serving others by providing excellent service for over 20 years.  Our licensed staff is certified in many different forms of body care to help you live a more healthy lifestyle free of stress.  We're eager to earn your business!
           </p>
-          <audio>
+          <audio autoplay>
             <source src="https://ia902702.us.archive.org/6/items/RiteOfSpring/05LeSacreDuPrintempstheRiteOfSpringBalletIn2PartsForOrchestra.mp3" type="audio/mp3">
             <source src="https://ia902702.us.archive.org/6/items/RiteOfSpring/05LeSacreDuPrintempstheRiteOfSpringBalletIn2PartsForOrchestra.ogg" type="audio/mp3">
           </audio>
